# ros-point-cloud-merger

./: CMakeLists.txt  README.md  package.xml
config/: husky.yaml  husky_old.yaml  husky_try.yaml  husky_z.yaml  kobuki.yaml  kobuki_old.yaml  kobuki_x.yaml
docs/: README.md  rosbag_run.md  testing.md  usage.md
docs/old_markdown/: oldREADME.md
include/ros-point-cloud-merger/: AxisManager.hpp  point_cloud_merger.hpp  point_cloud_merger_combine.h  point_cloud_merger_old.hpp  points_concat_filter.hpp
launch/: gmapping_package.launch  point_cloud_merger.launch  point_cloud_merger_combine.launch  point_cloud_merger_copy.launch  point_cloud_merger_old.launch  points_concat_filter copy.launch  points_concat_filter.launch  rviz.launch  world.launch
models/I2R_LVL9_LVL9/: model.sdf
models/I2R_LVL9_LVL9/meshes/: model.material
models/I2R_LVL9_LVL9_08112021/: model.sdf
models/I2R_LVL9_LVL9_08112021/meshes/: model.material
models/I2R_LVL9_LVL9_09112021/meshes/: model.material
models/ground_plane/: model-1_4.sdf  model.sdf
models/level9_level9/: model.config  model.sdf
models/level9_level9/meshes/: model.material
models/level9_north_level9_both_north_and_south/: model.config  model.sdf
models/new_new/: model.config  model.sdf
models/new_new/meshes/: model.material
ros-gtest/: package.xml
ros-gtest/include/ros-gtest/: AxisManager.hpp
ros-gtest/src/: test.cpp
rviz/: 8ptclouds_run.rviz
src/: AxisManager.cpp  archive.cpp  point_cloud_merger copy.cpp  point_cloud_merger.cpp  point_cloud_merger_combine.cpp  point_cloud_merger_node.cpp  point_cloud_merger_node_combine.cpp  point_cloud_merger_old.cpp  points_concat_filter copy.cpp  points_concat_filter-n.cpp  points_concat_filter-old.cpp  points_concat_filter.cpp  points_concat_filter_node copy.cpp  points_concat_filter_node.cpp  test.cpp  trial.cpp
src/merge/: CMakeLists.txt  package.xml
src/merge/cpp/: points_concat_filter.cpp  points_concat_filter_old.cpp
src/merge/launch/: description.launch  points_concat_filter.launch  robot.launch
src/merge/urdf/: VLP-16.urdf.xacro  velodyne.urdf.xacro  vlp.urdf.xacro
src_unit_testing/ros-gtest/: CMakeLists.txt  package.xml
src_unit_testing/ros-gtest/include/ros-gtest/: AxisManager.hpp
src_unit_testing/ros-gtest/src/: AxisManager.cpp  PointCloudMerger.cpp  test.cpp
src_unit_testing/ros-point-cloud-merger/config/: husky.yaml  husky_old.yaml  husky_y.yaml
src_unit_testing/ros-point-cloud-merger/include/ros-point-cloud-merger/: points_concat_filter.hpp
src_unit_testing/ros-point-cloud-merger/ros-gtest/: CMakeLists.txt
src_unit_testing/ros-point-cloud-merger/ros-gtest/src/: AxisManager.cpp
src_unit_testing/ros-point-cloud-merger/src/: point_cloud_merger.cpp  point_cloud_merger_node.cpp  points_concat_filter.cpp
src_unit_testing/ros-point-cloud-merger/text/: cmakelist_original.txt  cmakelist_point_cloud_merger.txt  package_point_cloud_merger.txt  package_points_concat_filter.txt
src_unit_testing/ros-point-cloud-merger/yaml/: interface.yaml
test/: test.cpp  test_launch.test
text/: cmake.txt  door.txt  door2.txt  no_node.txt  point.txt  points.txt
world/: CMakeLists.txt  package.xml
world/launch/: gazebo.launch
world/models/CylinderBlock/: model.sdf
world/models/ground_plane/: model-1_3.sdf
world/worlds/: I2R_LVL9.world  new.world
worlds/: 08112021.world  11112021.world  I2R_LVL9 (copy).world  I2R_LVL9.world  I2R_LVL9_10112021.world  I2R_LVL9_11112021.world  I2R_LVL9_SOLVED.world  I2R_LVL9_SOLVED_PT2.world  error.world  level9.world  level9_north_south.building.world  modified.world  new.world  old.world
yaml/: I2R_LVL9.building.yaml  I2R_LVL9_09112021.building.yaml  I2R_LVL9_10112021.building.yaml  I2R_LVL9_10112021_2.building.yaml  I2R_LVL9_SOLVED.building.yaml  copy.yaml  interface.yaml  level9.building.yaml  level9_north_south.building.yaml  level9_north_south_OLD.building.yaml  new.building.yaml
